# nano-agent

./: README.md  call_function.py  main.py  pyproject.toml  requirements.txt  system_prompts.py  test_get_file_content.py  test_get_files_info.py  test_write_file.py
calculator/: lorem.txt
functions/: get_file_content.py  get_files_info.py  run_python_file.py  write_file.py
nano/: call_function.py  call_function_openai.py  cli.py  local_model.py  main.py  system_prompts.py
nano/calculator/: main.py  test.py  tests.py
nano/calculator/pkg/: calculator.py
nano/functions/: create_directory.py  get_cwd.py  get_file_content.py  get_files_info.py  run_python_file.py  write_file.py
nano/tests/: test_get_file_content.py  test_get_files_info.py  test_run_python_file.py  test_write_file.py
